# airetl

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  workspace.yaml
.github/workflows/: workflow.yaml
airetl/: __init__.py  assets.py
tests/: test_version.py
