[tool.poetry]
name = "airetl"
version = "0.1.0"
description = "ETL for air quality and weather data"
authors = ["Elias Tavarez <etav@umich.edu>"]
readme = "README.md"
packages = [{ include = "airetl" }]

[tool.poetry.dependencies]
python = ">=3.9, <=3.11"
pandas = "^2.0.1"
requests = "^2.30.0"
dagster = "^1.3.4"
dagit = "^1.3.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
ruff = "^0.0.267"
isort = "^5.12.0"
pre-commit = "^3.3.1"

[tool.dagster]
module_name = "airetl"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
